# PyAutoReduce

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
autoreduce/: __init__.py  pipeline.py  target.py
autoreduce/acquire/: __init__.py  alma.py  cache.py  crds.py  footprint.py  koa.py  mast.py  quality.py
autoreduce/align/: __init__.py  diagnostics.py  registration.py
autoreduce/calibrate/: __init__.py  nir_frames.py
autoreduce/drizzle/: __init__.py  _common.py  combine.py  diagnostics.py  jwst_combine.py  nirc2_combine.py
autoreduce/inject/: __init__.py  imaging.py  keck.py
autoreduce/instruments/: __init__.py  acs_wfc.py  adapter.py  alma.py  nirc2.py  nircam.py  surveys.py  wfc3_ir.py  wfc3_uvis.py
autoreduce/noise/: __init__.py  jwst_rms.py  rms.py
autoreduce/package/: __init__.py  cosmic_rays.py  cutout.py  frames.py  interferometer.py  keck_frames.py  provenance.py
autoreduce/psf/: __init__.py  epsf.py  fallback.py  frame_combine.py  frame_epsf.py  moments.py  nirc2_star.py  starred_epsf.py  stars.py  stpsf_model.py
autoreduce/sky/: __init__.py  running.py
autoreduce/surveys/: __init__.py  fetch.py  pipeline.py
autoreduce/validation/: __init__.py  parity.py
autoreduce/visibilities/: __init__.py  assemble.py  extract.py  pipeline.py  simulate.py  split.py
prototypes/: alma_g09v140_spike.py  b1938_keck_spike.py  b1938_lens_fit.py  frame_products_validation.py  inject_alma_simobserve_spike.py  inject_recovery_jwst.py  inject_recovery_keck.py  inject_recovery_slacs.py  pj011646_parity_fit.py  slacs1430_parity_fit.py  slacs_f814w_spike.py  starred_drizzle_consistency.py  starred_epsf_spike.py  starred_vs_epsf_comparison.py  starred_vs_epsf_frame.py  starred_vs_epsf_m92.py  starred_vs_epsf_omegacen.py  survey_cutouts_spike.py
scripts/: reduce_cosmos_web_ring.py  reduce_j0252_wfc3.py  reduce_m92_jwst.py  reduce_omegacen_wfc3.py  reduce_pj011646.py  reduce_slacs0008.py  reduce_slacs1430.py
test_autoreduce/: test_cache.py  test_frame_products.py  test_import.py  test_inject.py  test_jwst.py  test_keck_combine_psf.py  test_keck_ground_stages.py  test_noise.py  test_psf_and_package.py  test_surveys.py  test_target_and_instruments.py  test_visibilities.py  test_visibilities_simulate.py  test_wfc3.py
(+8 files in other folders)
