[build-system]
requires = ["setuptools>=79.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoreduce"
dynamic = ["version"]
description = "Data reduction of HST (and future JWST/other) imaging into modeling-ready datasets for PyAutoLens and PyAutoGalaxy"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "James Nightingale", email = "James.Nightingale@newcastle.ac.uk" },
]
classifiers = [
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Physics",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]
keywords = ["astronomy", "hst", "data-reduction", "drizzle", "psf", "strong-lensing"]
dependencies = [
    "numpy>=1.24.0,<3.0.0",
    "astropy>=5.0",
    "astroquery>=0.4.6",
    "photutils>=1.8",
    "PyYAML>=6.0.1",
]

[project.urls]
Homepage = "https://github.com/PyAutoLabs/PyAutoReduce"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["docs", "prototypes", "test_autoreduce", "test_autoreduce*"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[project.optional-dependencies]
# The STScI HST stack is heavy and pins its own dependency tree; it is only
# needed to run reductions, not to import autoreduce or work with its outputs.
hst = ["drizzlepac>=3.5"]
# Keck/NIRC2 ground-based path: KOA archive access plus the standalone
# drizzle resampler (also shipped inside drizzlepac/jwst).
keck = ["pykoa>=1.7", "drizzle>=2.0"]
# High-fidelity PSF reconstruction back-ends (tier 3 of the PSF design).
psf = ["psfr"]
# Per-exposure frame products: deep-learned per-frame cosmic-ray masks
# (mask-only; pulls torch, hence not a base dependency).
frames = ["deepCR"]
test = ["pytest"]
dev = ["pytest", "black"]

[tool.pytest.ini_options]
testpaths = ["test_autoreduce"]
